@@ -28,38 +28,38 @@ echo "$MV" | sed -e 's/.* v//'
 
 if [ `echo "$MV" | grep v3 | wc -l` -eq 1 ]; then
     MONGODB_VER="3"
-    SHELL_OPTS="$PRIMARY_HOST"
-
-    if [ "$MONGO_SSL" = "true" ]; then
-        SHELL_OPTS="$SHELL_OPTS --ssl --sslAllowInvalidCertificates"
-    fi
-
-    SHELL_OPTS="$SHELL_OPTS --eval"
-
-    echo -n "- security: "
-    mongo $SHELL_OPTS 'var s=db.serverStatus();var x=s["security"];(!x)?"_DISABLED_":x["SSLServerSubjectName"];' 2>/dev/null | tail -n 1
-    
-    echo -n "- storage engine: "
-    mongo $SHELL_OPTS 'var s=db.serverStatus();JSON.stringify(s["storageEngine"]);' 2>/dev/null | grep '"name"' | cut -d '"' -f 4
 fi
 
 TEST_OPTS="exclude not_mongo26"
-SBT_OPTS="++$TRAVIS_SCALA_VERSION -Dtest.primaryHost=$PRIMARY_HOST"
-
-SBT_OPTS="$SBT_OPTS -Dtest.slowPrimaryHost=$PRIMARY_SLOW_PROXY -Dtest.slowProxyDelay=300 -Dtest.slowFailoverRetries=12"
+SBT_ARGS="-Dtest.primaryHost=$PRIMARY_HOST"
+SBT_ARGS="$SBT_ARGS -Dtest.slowPrimaryHost=$PRIMARY_SLOW_PROXY -Dtest.slowProxyDelay=300 -Dtest.slowFailoverRetries=12"
 
 if [ "$MONGODB_VER" = "3" ]; then
     TEST_OPTS="exclude mongo2"
     
     if [ "$MONGO_SSL" = "true" ]; then
-        SBT_OPTS="$SBT_OPTS -Dtest.enableSSL=true"
+        SBT_ARGS="$SBT_ARGS -Dtest.enableSSL=true"
     fi
 fi
 
-echo "- SBT options: $SBT_OPTS"
+JVM_OPTS="-Xms2048M -Xmx2048M -Xss64M -XX:+CMSClassUnloadingEnabled -XX:ReservedCodeCacheSize=192m"
 
-sbt ++$TRAVIS_SCALA_VERSION $SBT_OPTS ";error ;mimaReportBinaryIssues ;test:compile" || exit 2
-sbt ++$TRAVIS_SCALA_VERSION $SBT_OPTS "testOnly -- $TEST_OPTS"
+if [ `echo "$JAVA_HOME" | grep java-7-oracle | wc -l` -eq 1 ]; then
+    JVM_OPTS="$JVM_OPTS -XX:PermSize=512M -XX:MaxPermSize=512M"
+else
+    JVM_OPTS="$JVM_OPTS -XX:MetaspaceSize=512M -XX:MaxMetaspaceSize=512M"
+fi
+
+cat > /dev/stdout <<EOF
+- JVM options: $JVM_OPTS
+- SBT options: $SBT_ARGS
+- Test options: $TEST_OPTS
+EOF
+
+export JVM_OPTS
+
+sbt ++$TRAVIS_SCALA_VERSION ";error ;mimaReportBinaryIssues ;test:compile" || exit 2
+sbt ++$TRAVIS_SCALA_VERSION $SBT_ARGS ";testOnly -- $TEST_OPTS"
 SBT_ST="$?"
 
 if [ ! $SBT_ST -eq 0 ]; then
